small change in EmployeeHandler for updateEmployee method.